force-app/main/default/objects/EquipmentMasterData__c/EquipmentMasterData__c.object-meta.xml
<CustomObject>
    <description>Coste y características sobre el equipo de la instalación.</description>
    <label>Maestro de Equipo</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maestros de equipos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>