force-app/main/default/objects/EquipmentMasterData__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Coste</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>