force-app/main/default/objects/EquipmentMasterData__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <label>Instalación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>