force-app/main/default/objects/EquipmentMasterData__c/fields/IsIndoor__c.field-meta.xml
<CustomField>
    <fullName>IsIndoor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Interior</label>
    <type>Checkbox</type>
</CustomField>