force-app/main/default/objects/EquipmentMasterData__c/fields/IsRecoverable__c.field-meta.xml
<CustomField>
    <fullName>IsRecoverable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Recuperable</label>
    <type>Checkbox</type>
</CustomField>