force-app/main/default/objects/EquipmentMasterData__c/fields/SBQQProductCode__c.field-meta.xml
<CustomField>
    <fullName>SBQQProductCode__c</fullName>
    <description>Código de producto</description>
    <label>Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>