force-app/main/default/objects/EquipmentMasterData__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <length>80</length>
    <type>Text</type>
</CustomField>